--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "com.kapl.eda",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "displayName": "Event-Driven Architecture",
     "description": "This is an example package",
     "unity": "2019.1",
     "dependencies": { },
     "author": {
-      "name": "KaplInc",
+      "name": "Kapl",
       "email": "onetruekapl@gmail.com"
     },
     "samples": [
