--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "com.kapl.eda",
-    "version": "1.0.2",
-    "displayName": "Event-Driven Architecture",
+    "name": "com.kapl.era",
+    "version": "1.1.0",
+    "displayName": "Event-Request Architecture",
     "description": "This is an example package",
     "unity": "2019.1",
     "dependencies": { },
@@ -11,9 +11,9 @@
     },
     "samples": [
         {
-            "displayName": "Event Driven Architecture Example",
+            "displayName": "Event Request Architecture Example",
             "description": "Basic examples of how to work with the framework",
-            "path": "Example~/Event Driven Architecture Example"
+            "path": "Example~/Event Request Architecture Example"
         }
     ]
   }
